New Text and much more ...

--- a/src/app/dashboard/department-view/content/content.component.html
+++ b/src/app/dashboard/department-view/content/content.component.html
@@ -1,5 +1,5 @@
 <div class="line">
-<img src="{{ imageUrl }}" class="image">
+<img src="{{ getRandomImage() }}" class="image">
 <span class="empathyBox">
   <div class="title">{{ title }}</div>
   <div class="empathyText">{{ text }}</div>
