--- a/src/app/dashboard/department-view/department-view.component.html
+++ b/src/app/dashboard/department-view/department-view.component.html
@@ -2,6 +2,8 @@
   <div class="stepperContainer">
     <div class="stepperContent">
 
+      <div class="spacer"></div>
+
       <app-content
         [title]="displayData[stepper.index].title"
         [text]="displayData[stepper.index].text"
