--- a/src/app/preview-page/preview-page.component.css
+++ b/src/app/preview-page/preview-page.component.css
@@ -2,7 +2,7 @@
   display: grid;
   /* column-gap: 15px;
   row-gap: 15px; */
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr repeat(8, minmax(auto, 150px)) 1fr;
   grid-template-rows: auto;
 }
 
