--- a/src/app/dashboard/department-view/department-view.component.css
+++ b/src/app/dashboard/department-view/department-view.component.css
@@ -2,7 +2,8 @@
   display: grid;
   grid-template-columns: 55% auto;
   height: calc(100% - 50px);
-  background-color: rgb(236, 220, 250);
+  /* background-color: rgb(236, 220, 250); */
+  background-size: cover;
 }
 
 .helpContainer {
@@ -51,11 +52,11 @@
 
 .stepperContainer {
   margin-top: 20px;
-  margin-bottom: 20px;
-  height: inherit;
+  /* margin-bottom: 20px; */
+  height: auto;
   grid-column: span 1;
   background-color: white;
-  border-radius: 0px 15px 15px 0px;
+  border-radius: 0px 15px 0px 0px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   display: flex;
   flex-direction: column;
@@ -125,7 +126,7 @@ textarea:focus {
 .textareaLabel {
   margin-top: 15px;
   font-weight: 400;
-  font-size: 12px;
+  font-size: 14px;
   line-height: 16px;
   /* identical to box height, or 133% */
   letter-spacing: 0.4px;
