--- a/src/app/dashboard/human-resources-view/human-resources-view.component.css
+++ b/src/app/dashboard/human-resources-view/human-resources-view.component.css
@@ -3,6 +3,8 @@
   grid-template-columns: 55% auto;
   height: calc(100% - 50px);
   background-color: rgb(236, 220, 250);
+  background-image: url("../../../assets/background.png");
+  background-size: cover;
 }
 
 .helpContainer {
@@ -12,13 +14,13 @@
   margin-left: 50px;
   display: flex;
   flex-direction: column;
-  justify-content: top;
+  justify-content: space-evenly;
 }
 
 .hints {
   /* margin-top: 40px; */
   width: 100%;
-  margin-bottom: 40px;
+  /* margin-bottom: 40px; */
   background-color: white;
   border-radius: 15px 0px 0px 15px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -51,11 +53,11 @@
 
 .stepperContainer {
   margin-top: 20px;
-  margin-bottom: 20px;
-  height: inherit;
+  /* margin-bottom: 20px; */
+  height: auto;
   grid-column: span 1;
   background-color: white;
-  border-radius: 0px 15px 15px 0px;
+  border-radius: 0px 15px 0px 0px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   display: flex;
   flex-direction: column;
@@ -83,6 +85,7 @@
   align-content: flex-end;
   justify-content: end;
   margin-bottom: 20px;
+  margin-top: 15px;
 }
 
 .mat-raised-button {
@@ -112,7 +115,7 @@ textarea {
   line-height: 24px;
   /* identical to box height, or 150% */
   letter-spacing: 0.15px;
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
 }
 
 textarea:focus {
@@ -127,7 +130,16 @@ textarea:focus {
   line-height: 16px;
   /* identical to box height, or 133% */
   letter-spacing: 0.4px;
-
   /* 01. Primary/900 */
+  color: #23036A;
+}
+
+#count {
+  float: right;
+  /* margin-bottom: 15px; */
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 16px;
+  letter-spacing: 0.4px;
   color: #23036A;
 }
