--- a/src/app/dashboard/new-job-description/new-job-description.component.css
+++ b/src/app/dashboard/new-job-description/new-job-description.component.css
@@ -28,11 +28,11 @@
 
 .stepperContainer {
   margin-top: 20px;
-  margin-bottom: 20px;
-  height: inherit;
+  /* margin-bottom: 20px; */
+  height: auto;
   grid-column: span 1;
   background-color: white;
-  border-radius: 0px 15px 15px 0px;
+  border-radius: 0px 15px 0px 0px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   display: flex;
   flex-direction: column;
