--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,29 +1,17 @@
 <mat-sidenav-container class="sidenav-container">
-  <mat-sidenav #drawer class="sidenav" fixedInViewport
-      [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
-      [mode]="(isHandset$ | async) ? 'over' : 'side'"
-      [opened]="(isHandset$ | async) === false">
-    <mat-toolbar (click)="drawer.toggle()">Menu</mat-toolbar>
-    <mat-nav-list>
-      <a mat-list-item [routerLink]='["dashboard"]'>Home</a>
-      <a mat-list-item [routerLink]='["/preview"]'>Vorschau</a>
-      <!-- <a mat-list-item [routerLink]='["/department"]'>Department</a>
-      <a mat-list-item [routerLink]='["/recruitment"]'>Personal</a> -->
-      <!-- <a mat-list-item [routerLink]='["hiringmanager"]'>{{ userRoleService.role }}</a> -->
-      <!-- <a mat-list-item [routerLink]='["newjobdescription"]'>Textbausteine</a> -->
-    </mat-nav-list>
-  </mat-sidenav>
-  <mat-sidenav-content class="sidenav-container">
-    <mat-toolbar color="primary">
+  <mat-sidenav-content>
+    <mat-toolbar color="primary" class="toolbar">
+
+      <span>
       <button
         type="button"
         aria-label="Toggle sidenav"
         mat-icon-button
-        (click)="drawer.toggle()"
-        *ngIf="(isHandset$ | async) || !drawer.opened">
-        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+        (click)="goDashboard()">
+        <mat-icon aria-label="Side nav toggle icon">home</mat-icon>
       </button>
-        <span>Bundesgestaltung Prototype</span>
+        <span class="title">JOBFIX</span>
+      </span>
         <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
           <mat-icon>person</mat-icon>
         </button>
