--- a/src/app/dashboard/listoverview/listoverview.component.css
+++ b/src/app/dashboard/listoverview/listoverview.component.css
@@ -73,3 +73,17 @@
 .heightSpacer {
   height: 100px
 }
+
+.dashboardTitle {
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 56px;
+  /* identical to box height, or 117% */
+
+  /* 01. Primary/900 */
+  color: #23036A;
+  /* position: relative; */
+  margin-left: 50px;
+  margin-top: 80px;
+  margin-bottom: 50px;
+}
