--- a/src/app/dashboard/listoverview/listoverview.component.html
+++ b/src/app/dashboard/listoverview/listoverview.component.html
@@ -1,25 +1,30 @@
 <div class="mainContainer">
 <div class="listContainer">
 
+
 <div *ngIf="userRoleService.getUserRole() === 'human_resources'">
 
+<div class="dashboardTitle">Dashboard</div>
+
 <div class="sectionContainer">
-    <div align="end">
+
+  <div align="end">
       <button mat-fab color="primary" (click)="onAddJobDescription()"><mat-icon>add</mat-icon>
       </button>
     </div>
 
-<div class="title">Neue Stellen</div>
-<mat-nav-list role="list">
-  <div  *ngFor="let item of jds">
-  <mat-list-item *ngIf="item.stage === 'new'" role="listitem" >
-    <a matLine (click)="openToEditNewJD(item.key)">{{ item.id }}</a>
-    <button mat-icon-button>
-      <mat-icon (click)="onDeleteJobDescription(item.key)">delete</mat-icon>
-   </button>
-  </mat-list-item>
-  </div>
-</mat-nav-list>
+    <div class="title">Neue Stellenausschreibungen</div>
+    <mat-nav-list role="list">
+      <div  *ngFor="let item of jds">
+      <mat-list-item *ngIf="item.stage === 'new'" role="listitem" >
+        <a matLine (click)="openToEditNewJD(item.key)">{{ item.id }}</a>
+        <button mat-icon-button>
+          <mat-icon (click)="onDeleteJobDescription(item.key)">delete</mat-icon>
+      </button>
+      </mat-list-item>
+      </div>
+    </mat-nav-list>
+
 </div>
 
 
@@ -70,7 +75,7 @@
 <mat-nav-list role="list">
   <div  *ngFor="let item of jds">
   <mat-list-item *ngIf="item.stage === 'finished'" role="listitem" >
-    <a matLine (click)="openToEditByHr(item.key)">{{ item.id }}</a>
+    <a matLine (click)="openPreview(item.key)">{{ item.id }}</a>
   </mat-list-item>
   </div>
 </mat-nav-list>
@@ -82,8 +87,11 @@
 
 <div *ngIf="userRoleService.getUserRole() === 'department'">
 
+  <div class="dashboardTitle">Dashboard</div>
+
+
 <div class="sectionContainer">
-  <div class="title">Neue Stellen</div>
+  <div class="title">Neue Stellenausschreibungen</div>
   <mat-nav-list role="list">
     <div  *ngFor="let item of jds">
     <mat-list-item *ngIf="item.stage === 'send_to_department'" role="listitem" (click)="openToEditByDepartment(item.key)">{{ item.id }}</mat-list-item>
@@ -104,7 +112,7 @@
   <div class="title">Fertiggestellt</div>
   <mat-nav-list role="list">
     <div  *ngFor="let item of jds">
-    <mat-list-item *ngIf="item.stage === 'completed_by_department'" role="listitem" (click)="openToEditByDepartment(item.key)">{{ item.id }}</mat-list-item>
+    <mat-list-item *ngIf="item.stage === 'completed_by_department'" role="listitem" (click)="openPreview(item.key)">{{ item.id }}</mat-list-item>
     </div>
   </mat-nav-list>
 </div>
