arrow concept for speech bubbles

--- a/src/app/dashboard/department-view/content/content.component.css
+++ b/src/app/dashboard/department-view/content/content.component.css
@@ -1,7 +1,7 @@
 .container {
   height: 100%;
-  display: flex;
-  flex-direction: column;
+  /* display: flex;
+  flex-direction: column; */
 }
 
 .line {
@@ -9,26 +9,40 @@
 }
 
 .empathyBox {
-  padding-left: 20px;
-  /* height: 200px; */
-  /* border-radius: 5px; */
-  /* border: 2px solid rgba(98, 98, 98, 0.374); */
+  padding: 20px;
+  background-color: #E9505B;
+  /* min-width: 300px; */
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 10px;
+}
+
+.empathyArrow {
+  position: relative;
+  top: 60px;
+  right: 0px;
+  width: 80px;
+  height: 30px;
+  background-color: aqua;
+  display: block;
 }
 
 .image {
   margin-left: 5%;
   /* margin-top: 10px; */
-  width: 45%;
+  width: 40%;
   height: 45%;
 }
 
 .title {
-  margin-top: 40px;
-  font-weight: 700;
+  margin-top: 20px;
+  font-weight: 500;
   font-size: 20px;
   line-height: 24px;
   letter-spacing: 0.15px;
-  color: #23036A;
+  color: white;
 }
 
 .empathyText {
@@ -40,7 +54,7 @@
   letter-spacing: 0.15px;
 
   /* 00. On Surface / Medium Emphasis */
-  color: rgba(0, 0, 0, 0.6);
+  color: white
 }
 
 .spacer {
