--- a/src/app/dashboard/department-view/department-view.component.html
+++ b/src/app/dashboard/department-view/department-view.component.html
@@ -1,37 +1,40 @@
 <div class="mainContainer">
-  <div class="stepperContainer">
-    <div class="stepperContent">
+  <div class="leftContainer">
+    <div class="stepperContainer">
+      <div class="stepperContent">
 
-      <div class="spacer"></div>
+        <div class="spacer"></div>
 
-      <app-content
-        [title]="displayData[stepper.index].title"
-        [text]="displayData[stepper.index].text"
-        [imageUrl]="displayData[stepper.index].imageUrl">
-      </app-content>
+        <app-content
+          [title]="displayData[stepper.index].title"
+          [text]="displayData[stepper.index].text"
+          [imageUrl]="displayData[stepper.index].imageUrl">
+        </app-content>
 
-      <div class="spacer"></div>
+        <div class="spacer"></div>
 
-      <div class="textareaLabel">{{ displayData[stepper.index].textareaLabel }}</div>
+        <div class="textareaLabel">{{ displayData[stepper.index].textareaLabel }}</div>
 
-      <form [formGroup]="form">
-        <textarea rows="6" formControlName="what_you_work_on" *ngIf="stepper.index == 0"></textarea>
-        <textarea rows="6" formControlName="what_you_bring" *ngIf="stepper.index == 1"></textarea>
-        <textarea rows="6" formControlName="team" *ngIf="stepper.index == 2"></textarea>
-        <textarea rows="6" formControlName="how_we_work" *ngIf="stepper.index == 3"></textarea>
-        <textarea rows="6" formControlName="impact_in_work" *ngIf="stepper.index == 4"></textarea>
-        <textarea rows="6" formControlName="title" *ngIf="stepper.index == 5"></textarea>
-        <textarea rows="6" formControlName="summary" *ngIf="stepper.index == 6"></textarea>
-      </form>
-      <span class="buttonBar">
-        <button mat-raised-button color="primary" (click)="back()" *ngIf="stepper.index !== 0">ZURÜCK</button>
-        <span class="spacer"></span>
-        <button mat-raised-button color="primary" (click)="_next()" *ngIf="stepper.index !== 6">WEITER</button>
-        <button mat-raised-button color="primary" (click)="save()" *ngIf="stepper.index == 6">SICHERN</button>
-        <button mat-raised-button color="primary" (click)="submitToHr()" *ngIf="stepper.index == 6">FERTIGSTELLEN</button>
-      </span>
-      <app-stepper #stepper class="stepper"></app-stepper>
+        <form [formGroup]="form">
+          <textarea rows="6" formControlName="what_you_work_on" *ngIf="stepper.index == 0"></textarea>
+          <textarea rows="6" formControlName="what_you_bring" *ngIf="stepper.index == 1"></textarea>
+          <textarea rows="6" formControlName="team" *ngIf="stepper.index == 2"></textarea>
+          <textarea rows="6" formControlName="how_we_work" *ngIf="stepper.index == 3"></textarea>
+          <textarea rows="6" formControlName="impact_in_work" *ngIf="stepper.index == 4"></textarea>
+          <textarea rows="6" formControlName="title" *ngIf="stepper.index == 5"></textarea>
+          <textarea rows="6" formControlName="summary" *ngIf="stepper.index == 6"></textarea>
+        </form>
+        <span class="buttonBar">
+          <button mat-raised-button color="primary" (click)="back()" *ngIf="stepper.index !== 0">ZURÜCK</button>
+          <span class="spacer"></span>
+          <button mat-raised-button color="primary" (click)="_next()" *ngIf="stepper.index !== 6">WEITER</button>
+          <button mat-raised-button color="primary" (click)="save()" *ngIf="stepper.index == 6">SICHERN</button>
+          <button mat-raised-button color="primary" (click)="submitToHr()" *ngIf="stepper.index == 6">FERTIGSTELLEN</button>
+        </span>
+        <app-stepper #stepper class="stepper"></app-stepper>
+      </div>
     </div>
+    <div class="arrow"></div>
   </div>
   <div class="helpContainer">
     <div class="hints">
