Speech bubbles and arrows

--- a/src/app/dashboard/department-view/department-view.component.css
+++ b/src/app/dashboard/department-view/department-view.component.css
@@ -136,13 +136,14 @@ textarea:focus {
   color: #23036A;
 }
 
-
 .arrow {
-  background-color: green;
-  width: 50px;
-  height: 150px;
   position: relative;
-  top:150px
+  top: 130px;
+  width: 0;
+  height: 0;
+  border-top: 80px solid transparent;
+  border-bottom: 80px solid transparent;
+  border-left: 30px solid white;
 }
 
 .leftContainer {
