--- a/src/app/dashboard/department-view/content/content.component.css
+++ b/src/app/dashboard/department-view/content/content.component.css
@@ -1,10 +1,14 @@
 .container {
   height: 100%;
-  /* display: flex;
-  flex-direction: column; */
+  display: flex;
+  flex-direction: column;
 }
 
 .line {
+  display: flex;
+}
+
+.imageContainer {
   display: flex;
 }
 
@@ -23,17 +27,19 @@
   position: relative;
   top: 60px;
   right: 0px;
-  width: 80px;
-  height: 30px;
-  background-color: aqua;
+  width: 0;
+  height: 0;
+  border-top: 0px solid transparent;
+  border-bottom: 40px solid transparent;
+  border-right: 40px solid #E9505B;
   display: block;
 }
 
 .image {
-  margin-left: 5%;
-  /* margin-top: 10px; */
-  width: 40%;
-  height: 45%;
+  position: relative;
+  left: 10%;
+  bottom: -5%;
+  height: 230px;
 }
 
 .title {
