--- a/src/app/dashboard/department-view/content/content.component.html
+++ b/src/app/dashboard/department-view/content/content.component.html
@@ -1,6 +1,8 @@
 <div class="line">
-<img src="{{ getRandomImage() }}" class="image">
-<div class="empathyArrow"></div>
+<div class="imageContainer">
+  <img src="{{ getRandomImage() }}" class="image">
+  <div class="empathyArrow"></div>
+</div>
 <span class="empathyBox">
   <div class="title">{{ title }}</div>
   <div class="empathyText">{{ text }}</div>
