--- a/src/app/dashboard/human-resources-view/human-resources-view.component.html
+++ b/src/app/dashboard/human-resources-view/human-resources-view.component.html
@@ -1,4 +1,5 @@
 <div class="mainContainer">
+  <div class="leftContainer">
   <div class="stepperContainer">
     <div class="stepperContent">
 
@@ -42,7 +43,9 @@
     </span>
     <app-stepper-HR #stepper class="stepper"></app-stepper-HR>
   </div>
-  </div>
+</div>
+<div class="arrow"></div>
+</div>
   <div class="helpContainer">
     <div class="hints" *ngIf="stepper.index !== 9">
       <div class="title">Hilfestellungen</div>
