--- a/src/app/splashcreens/splashcreens.component.css
+++ b/src/app/splashcreens/splashcreens.component.css
@@ -12,7 +12,7 @@
   position: absolute;
   left: 25%;
   top: 20%;
-  width: 60%;
+  width: 65%;
 }
 
 .splashOneImageContainer {
@@ -29,12 +29,12 @@
 
 
 .splashTwoImageContainer {
-  width: 40%;
+  width: 45%;
   /* height: 80%; */
   position: absolute;
-  bottom: -50%;
+  bottom: 0%;
   margin-bottom: 0px;
-  left: -8%;
+  left: 0%;
 }
 
 .splashTwoImage {
@@ -42,22 +42,34 @@
 }
 
 .splashThreeImageContainerLeft {
-  width: 45%;
+  width: 25%;
   position: absolute;
-  bottom: -10%;
+  bottom: 0%;
   margin-bottom: 0px;
-  left:-10%;
+  /* left:-10%; */
 }
 
 .splashThreeImageContainerRight {
-  width: 45%;
+  width: 25%;
   position: absolute;
-  bottom: -10%;
+  bottom: 0%;
   margin-bottom: 0px;
-  right: -5%;
+  right: 0;
 }
 
 .splashThreeImage {
+  margin-bottom: 0px;
+}
+
+.splashFourImageContainer {
+  width: 50%;
+  position: absolute;
+  bottom: 0%;
+  margin-bottom: -80px;
+  left: -100px;
+}
+
+.splashFourImage {
   margin-bottom: 0px;
 }
 
