--- a/src/app/dashboard/department-view/department-view.component.html
+++ b/src/app/dashboard/department-view/department-view.component.html
@@ -38,7 +38,7 @@
   </div>
   <div class="helpContainer">
     <div class="hints">
-      <div class="title">Hilfestellungen</div>
+      <div class="title">Solche Formulierungen begeistern sie:</div>
       <div class="empathyText">
         <ul>
           <li *ngFor="let hint of displayData[stepper.index].hints">{{ hint }}</li>
