--- a/src/app/dashboard/human-resources-view/human-resources-view.component.html
+++ b/src/app/dashboard/human-resources-view/human-resources-view.component.html
@@ -48,7 +48,7 @@
 </div>
   <div class="helpContainer">
     <div class="hints" *ngIf="stepper.index !== 9">
-      <div class="title">Hilfestellungen</div>
+      <div class="title">Solche Formulierungen begeistern sie:</div>
       <div class="empathyText">
         <ul>
           <li *ngFor="let hint of displayData[stepper.index].hints">{{ hint }}</li>
