Took out dashboard for department view

--- a/src/app/splashcreens/splashcreens.component.html
+++ b/src/app/splashcreens/splashcreens.component.html
@@ -37,24 +37,8 @@
 </div>
 
 <div *ngIf="screen === 4">
-  <div class="splashTitle">
-    In JOBFIX arbeiten Fachabteilung und Recruitment gemeinsam. <br>
-    So gehören unzählige E-Mails und Word Dokumente der Vergangenheite an.</div>
-  <div class="splashThreeImageContainerLeft">
-    <img src="assets/splash_screen/3a.svg" class="splashThreeImage">
-  </div>
-  <div class="splashThreeImageContainerRight">
-    <img src="assets/splash_screen/3b.svg" class="splashThreeImage">
-  </div>
-  <div class="buttonBar">
-    <button mat-raised-button color="primary" (click)="back()" class="button">ZURÜCK</button>
-    <button mat-raised-button color="primary" (click)="next()" class="button">WEITER</button>
-  </div>
-</div>
-
-<div *ngIf="screen === 5">
-  <div class="splashTitle">JOBFIX wandelt deine Stellenausschreibung
-    in ein übersichtliches Design um. Alle wichtigen Informationen, auf einen Blick.</div>
+  <div class="splashTitle">Fülle jetzt die Stellenausschreibung aus, anhand der Bedürfnisse der Bewerbenden,
+    um viele qualitative Bewerbungen zu erhalten.</div>
   <div class="splashFourImageContainer">
     <img src="assets/splash_screen/4.svg" class="splashFourImage">
   </div>
