--- a/src/app/dashboard/department-view/department-view.component.html
+++ b/src/app/dashboard/department-view/department-view.component.html
@@ -28,7 +28,7 @@
           <button mat-raised-button color="primary" (click)="back()" *ngIf="stepper.index !== 0">ZURÜCK</button>
           <span class="spacer"></span>
           <button mat-raised-button color="primary" (click)="_next()" *ngIf="stepper.index !== 6">WEITER</button>
-          <button mat-raised-button color="primary" (click)="save()" *ngIf="stepper.index == 6">SICHERN</button>
+          <!-- <button mat-raised-button color="primary" (click)="save()" *ngIf="stepper.index == 6">SICHERN</button> -->
           <button mat-raised-button color="primary" (click)="submitToHr()" *ngIf="stepper.index == 6">FERTIGSTELLEN</button>
         </span>
         <app-stepper #stepper class="stepper"></app-stepper>
@@ -38,7 +38,7 @@
   </div>
   <div class="helpContainer">
     <div class="hints">
-      <div class="title">Solche Formulierungen begeistern sie:</div>
+      <div class="title">Daher möchte sie beispielsweise wissen:</div>
       <div class="empathyText">
         <ul>
           <li *ngFor="let hint of displayData[stepper.index].hints">{{ hint }}</li>
