--- a/src/app/splashcreens/splashcreens.component.html
+++ b/src/app/splashcreens/splashcreens.component.html
@@ -3,7 +3,7 @@
 <div *ngIf="screen === 1">
   <div class="splashTitle">Willkommen bei JOBFIX.<br>
     Stellenanzeigen - <br>
-    Zugeschnitten auf Bewerber:innen.</div>
+    Zugeschnitten auf Bewerbende.</div>
   <div class="splashOneImageContainer">
     <img src="assets/splash_screen/1.svg" class="splashOneImage">
   </div>
@@ -26,7 +26,7 @@
 
 <div *ngIf="screen === 3">
   <div class="splashTitle">JOBFIX unterstützt dich dabei Fragen <br>
-    und Interessen von Bewerber:innen zu beantworten. Damit wieder mehr qualitative Bewerbungen bei dir ankommen.</div>
+    und Interessen von Bewerbende zu beantworten. Damit wieder mehr qualitative Bewerbungen bei dir ankommen.</div>
   <div class="splashTwoImageContainer">
     <img src="assets/splash_screen/2b.svg" class="splashTwoImage">
   </div>
