--- a/src/app/dashboard/new-job-description/new-job-description.component.html
+++ b/src/app/dashboard/new-job-description/new-job-description.component.html
@@ -36,13 +36,16 @@
         </mat-form-field>
       </span>
     </form>
-    <!-- <div class="spacer"></div> -->
+    <div *ngIf="key !== ''">
+      <div class="title">Link für die Fachabteilung</div>
+      <p>http://www.bundesgestaltung.de/home/department?key={{ key }}</p>
+    </div>
     <span class="buttonBar">
       <button mat-raised-button color="primary" (click)="onClear()">ZURÜCK</button>
       <span class="spacer"></span>
       <button mat-raised-button color="primary" *ngIf="key === ''" (click)="onCreate()">ERSTELLEN</button>
       <button mat-raised-button color="primary" *ngIf="key !== ''" (click)="onSave()">SICHERN</button>
-      <button mat-raised-button color="primary" *ngIf="key !== ''" (click)="onSubmitToDepartment()">AN FACHABTEILUNG SENDEN</button>
+      <!-- <button mat-raised-button color="primary" *ngIf="key !== ''" (click)="onSubmitToDepartment()">AN FACHABTEILUNG SENDEN</button> -->
     </span>
   </div>
 </div>
