Moved random image to service

--- a/src/app/dashboard/department-view/content/content.component.html
+++ b/src/app/dashboard/department-view/content/content.component.html
@@ -1,6 +1,6 @@
 <div class="line">
 <div class="imageContainer">
-  <img src="{{ getRandomImage() }}" class="image">
+  <img src="{{ imageUrl }}" class="image">
   <div class="empathyArrow"></div>
 </div>
 <span class="empathyBox">
