Updated Text for HR

--- a/src/app/dashboard/department-view/department-view.component.html
+++ b/src/app/dashboard/department-view/department-view.component.html
@@ -12,7 +12,7 @@
 
         <div class="spacer"></div>
 
-        <div class="textareaLabel">{{ displayData[stepper.index].textareaLabel }}</div>
+        <!-- <div class="textareaLabel">{{ displayData[stepper.index].textareaLabel }}</div> -->
 
         <form [formGroup]="form">
           <textarea rows="6" formControlName="what_you_work_on" *ngIf="stepper.index == 0"></textarea>
