--- a/src/app/dashboard/human-resources-view/human-resources-view.component.css
+++ b/src/app/dashboard/human-resources-view/human-resources-view.component.css
@@ -14,7 +14,7 @@
   margin-left: 50px;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  /* justify-content: space-evenly; */
 }
 
 .hints {
@@ -24,6 +24,7 @@
   background-color: white;
   border-radius: 15px 0px 0px 15px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  margin-top: 40px;
 }
 
 .title {
