--- a/src/app/dashboard/listoverview/listoverview.component.html
+++ b/src/app/dashboard/listoverview/listoverview.component.html
@@ -4,7 +4,7 @@
 
 <div *ngIf="userRoleService.getUserRole() === 'human_resources'">
 
-<div class="dashboardTitle">Dashboard</div>
+<div class="dashboardTitle">Deine Stellenanzeigen</div>
 
 <div class="sectionContainer">
 
