Splashscreens for department

--- a/src/app/dashboard/department-view/department-view.component.html
+++ b/src/app/dashboard/department-view/department-view.component.html
@@ -37,7 +37,7 @@
   </div>
   <div class="helpContainer">
     <div class="hints">
-      <div class="title">Daher möchte sie beispielsweise wissen:</div>
+      <div class="title">Bewerbende möchten beispielsweise wissen:</div>
       <div class="empathyText">
         <ul>
           <li *ngFor="let hint of displayData[stepper.index].hints">{{ hint }}</li>
