--- a/src/app/dashboard/human-resources-view/human-resources-view.component.html
+++ b/src/app/dashboard/human-resources-view/human-resources-view.component.html
@@ -55,7 +55,7 @@
       </div>
     </div>
     <div class="hints" *ngIf="stepper.index < 7">
-      <div class="title">Input der Fachabteilung</div>
+      <div class="title">Vorschlag der Fachabteilung</div>
       <div class="empathyText">"{{ departmentData[stepper.index] }}"</div>
      </div>
   </div>
