--- a/src/app/dashboard/new-job-description/new-job-description.component.html
+++ b/src/app/dashboard/new-job-description/new-job-description.component.html
@@ -38,7 +38,7 @@
     </form>
     <div *ngIf="key !== ''">
       <div class="title">Link für die Fachabteilung</div>
-      <p>http://www.bundesgestaltung.de/home/department?key={{ key }}</p>
+      <p>http://www.bundesgestaltung.de?key={{ key }}</p>
     </div>
     <span class="buttonBar">
       <button mat-raised-button color="primary" (click)="onClear()">ZURÜCK</button>
