--- a/src/app/dashboard/new-job-description/link-dialog/link-dialog.component.html
+++ b/src/app/dashboard/new-job-description/link-dialog/link-dialog.component.html
@@ -1,5 +1,5 @@
 <div class="mat-title">Link für die Fachabteilung</div>
-<p>http://www.bundesgestaltung.de/home/department?key={{ data.key }}</p>
+<p>http://www.bundesgestaltung.de?key={{ data.key }}</p>
 <mat-dialog-actions align="end">
   <button mat-button mat-dialog-close>OK</button>
 </mat-dialog-actions>
