--- a/src/app/splashcreens/splashcreens.component.css
+++ b/src/app/splashcreens/splashcreens.component.css
@@ -88,3 +88,14 @@
   display: inline-block;
   width: 125px;
 }
+
+.kontaktContainer {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 24px;
+  color: #24036a66;
+  position: absolute;
+  bottom: 10px;
+  right:20px;
+}
+
