--- a/src/app/splashcreens/splashcreens.component.html
+++ b/src/app/splashcreens/splashcreens.component.html
@@ -1,4 +1,5 @@
 <div class="mainContainer">
+  <div class="kontaktContainer">Kontakt: info@bundesgestaltung.de</div>
 
 <div *ngIf="screen === 1">
   <div class="splashTitle">Willkommen bei JOBFIX.<br>
